@@ -1,9 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.9
-Date: 2025-03-27
+Date: 2025-03-28
   Info:
     - Internal location changes
     - Add an achevement for visiting Hexalith, the images are unfinished at the moment though
+    - Hide uranium ore until you go to hexalith and get uranium-mining
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.9
 Date: 2025-03-27
